# evalbench

./: AGENTS.md  CHANGELOG.md  Makefile  cloudbuild.yaml  pyproject.toml  requirements.txt
datasets/: test_collision_config.yaml
datasets/claude-code-tools/: claude-code-skills.evalset.json  example_run_skills_config.yaml
datasets/model_configs/: claude_code_model.yaml  claude_code_skills_model.yaml
docs/: gemini_cli_agent_testing.md
evalbench/: eval_service.py  evalbench.py
evalbench/databases/: alloydb.py  emulator_manager.py  mysql.py  postgres.py  spanner.py  sqlite.py  sqlserver.py
evalbench/evalproto/: eval_connect.proto
evalbench/evaluator/: __init__.py  agentevaluator.py  dataagentorchestrator.py  evaluator.py  interactorchestrator.py  oneshotorchestrator.py  progress_reporter.py  streamingorchestrator.py
evalbench/reporting/: __init__.py  bqstore.py  csv.py  gcs.py
evalbench/scorers/: binaryrubricscorer.py  dbtscorer.py  llmrater.py  pythonscorer.py  rubricscorer.py  score.py  setmatcher.py  skillsbestpractices.py  skillstrajectorymatcher.py  trajectorymatcher.py  util.py
evalbench/test/: binaryrubricscorer_test.py  dbtscorer_test.py  gcs_reporter_test.py  gcs_test.py  llmrater_test.py  pythonscorer_test.py  query_data_api_test.py  rubricscorer_test.py  test_db_cleanups.py  trajectory_matcher_test.py
evalbench/util/: loghandler.py  sanitizer.py  (+2 more)
evalbench_service/: Dockerfile  entrypoint.sh  supervisord_combined.conf
verifier/: verify.py
viewer/: conversations.py  main.py  precompute_trends.py  run_precompute.py  summarizer.py  trends.py
(+16 files in other folders)
